--- a/nill-dl/index.html
+++ b/nill-dl/index.html
@@ -304,7 +304,7 @@
                                      </div>
                                      <div class="row">
                                          <div class="col-12">
-                                             <a href="C:\Users\Administrator\OneDrive - University of Miami\Desktop\themeforest-qrCi4crm-nill-bootstrap-4-personal-portfolio-and-resume\nill-dl\assets\img\CV updated February 2020.pdf" class="pill-button mt-3 mb-lg-0 mr-4">Download Cv</a>
+                                             <a href="C:\Users\Administrator\OneDrive - University of Miami\Desktop\themeforest-qrCi4crm-nill-bootstrap-4-personal-portfolio-and-resume\nill-dl\assets\img\me.JPG" class="pill-button mt-3 mb-lg-0 mr-4">Download Cv</a>
                                              <a href="javascript:void(0);" class="pill-button mt-3 mb-lg-0">Send Message</a>
                                          </div>
                                      </div>
