--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                              </div>
                              <div class="row mt-4">
                                  <div class="col-lg-6">
-                                     <img src="C:\Users\Administrator\OneDrive - University of Miami\Desktop\themeforest-qrCi4crm-nill-bootstrap-4-personal-portfolio-and-resume\nill-dl\assets\img\me.JPG" alt="/" class="rounded img-thumbnail w-100">
+                                     <img src="\nill-dl\assets\img\me.JPG" alt="/" class="rounded img-thumbnail w-100">
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
                                      <h2 class="text-dark mb-2">About Me<span class="base-color"></span></h2>
@@ -304,7 +304,7 @@
                                      </div>
                                      <div class="row">
                                          <div class="col-12">
-                                             <a href="C:\Users\Administrator\OneDrive - University of Miami\Desktop\themeforest-qrCi4crm-nill-bootstrap-4-personal-portfolio-and-resume\nill-dl\assets\img\me.JPG" class="pill-button mt-3 mb-lg-0 mr-4">Download Cv</a>
+                                             <a href="\nill-dl\assets\img\cv.pdf" class="pill-button mt-3 mb-lg-0 mr-4">Download Cv</a>
                                              <a href="javascript:void(0);" class="pill-button mt-3 mb-lg-0">Send Message</a>
                                          </div>
                                      </div>
