--- a/index.html
+++ b/index.html
@@ -282,8 +282,7 @@
                              </div>
                              <div class="row mt-4">
                                  <div class="col-lg-6">
-                                    <img src="assets\img\me.jpg"> 
-                                        <!-- alt="/" class="rounded img-thumbnail w-100">  --> -->
+                                    <img src="assets\img\me.jpg" alt="/" class="rounded img-thumbnail w-100">  
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
                                      <h2 class="text-dark mb-2">About Me<span class="base-color"></span></h2>
