--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <!--    Hero End    -->
 
              <!--   About Start   -->
-             <section id="about" class="section pp-scrollable about text-dark" data-navigation-color="#fff" data-navigation-tooltip="ABOUT ME">
+             <section id="about" class="section pp-scrollable about text-dark" data-navigation-color="#fff" data-navigation-tooltip="ABOUT ME" style="z-index: 8;background-color:rgb(181, 208, 251);">
                  <div class="display-table">
                      <div class="display-content">
                          <div class="container">
@@ -286,7 +286,7 @@
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
                                      <h2 class="text-dark mb-2">About Me<span class="base-color"></span></h2>
-                                     <h5 class="text-dark mb-3">Hello I'm Samantha Ballard</h5>
+                                     <h5 class="text-dark mb-3">Hello, I'm Samantha Ballard </h5>
                                      <div class="row">
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                              <!-- <p class="text-dark">Birthday : <span class="text-gray"> 1 April 1990</span></p> -->
@@ -298,14 +298,14 @@
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                             
                                              <p class="text-dark">Degree : <span class="text-gray">PhD</span></p>
-                                             <p class="text-dark">Mail : <span class="text-gray"><a href="mailto: srb146@miami.edu">srb146@miami.edu</span></a> </p>
+                                             <p class="text-dark">Mail : <span class="text-gray"><a href="mailto:srb146@miami.edu">srb146@miami.edu</span></a> </p>
                                              <!-- <p class="text-dark">Freelance : <span class="text-gray">Available</span></p> -->
                                          </div>
                                      </div>
                                      <div class="row">
                                          <div class="col-12">
-                                             <a href="assets\img\cv.pdf" class="pill-button mt-3 mb-lg-0 mr-4">Download Cv</a>
-                                             <a href="javascript:void(0);" class="pill-button mt-3 mb-lg-0">Send Message</a>
+                                             <a href="assets\img\cv.pdf" class="pill-button mt-3 mb-lg-0 mr-4">Download CV</a>
+                                             <a href="mailto:srb146@miami.edu" class="pill-button mt-3 mb-lg-0">Send Message</a>
                                          </div>
                                      </div>
                                  </div>
