--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <!--    Hero End    -->
 
              <!--   About Start   -->
-             <section id="about" class="section pp-scrollable about text-dark" data-navigation-color="#fff" data-navigation-tooltip="ABOUT ME" style="z-index: 8;background-color:rgb(181, 208, 251);">
+             <section id="about" class="section pp-scrollable about text-dark" data-navigation-color="#fff" data-navigation-tooltip="ABOUT ME" data-anchor="about" style="z-index: 8;background-color:rgb(181, 208, 251);">
                  <div class="display-table">
                      <div class="display-content">
                          <div class="container">
@@ -304,7 +304,7 @@
                                      </div>
                                      <div class="row">
                                          <div class="col-12">
-                                             <a href="assets\img\cv.pdf" class="pill-button mt-3 mb-lg-0 mr-4">Download CV</a>
+                                             <a href="assets\img\cv.pdf" class="pill-button mt-3 mb-lg-0 mr-4" target="_blank">Download CV</a>
                                              <a href="mailto:srb146@miami.edu" class="pill-button mt-3 mb-lg-0">Send Message</a>
                                          </div>
                                      </div>
