updates to background color

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <!--    Hero End    -->
 
              <!--   About Start   -->
-             <section id="about" class="section pp-scrollable about text-dark" data-navigation-color="#fff" data-navigation-tooltip="ABOUT ME" data-anchor="about" style="z-index: 8;background-color:rgb(181, 208, 251);">
+             <section id="about" class="section pp-scrollable about text-dark" data-navigation-color="#fff" data-navigation-tooltip="ABOUT ME" data-anchor="about" style="z-index: 8; background-color:rgb(156, 188, 223); transform: trasnlate3d(0px, 0px, 0px);">
                  <div class="display-table">
                      <div class="display-content">
                          <div class="container">
