a lot of commenting

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                      </div>
                                  </div>
                              </div>
-                             <div id="count-up" class="text-center">
+                             {{# <div id="count-up" class="text-center">
                                  <div class="container">
                                      <div class="row mt-4">
                                          <!-- Item-01 -->
@@ -354,7 +354,7 @@
                                              <p class="mb-0">Happy Client</p>
                                          </div>
                                      </div>
-                                 </div>
+                                 </div> #}}
                              </div>
                          </div>
                      </div>
@@ -467,7 +467,7 @@
              <!--   Resume End   -->
 
              <!--   Services Start   -->
-             <section id="services" class="section pp-scrollable services" data-navigation-color="#fff" data-navigation-tooltip="SERVICES">
+             {{# <section id="services" class="section pp-scrollable services" data-navigation-color="#fff" data-navigation-tooltip="SERVICES">
                  <div class="display-table">
                      <div class="display-content">
                          <div class="container">
@@ -999,7 +999,7 @@
                          </div>
                      </div>
                  </div>
-             </section>
+             </section> #}}
              <!--   Contact End   -->
 
              <!--   Footer Start   -->
