--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
 
         <!-- Portfolio Single Modal -->
-        <div class="portfolio-single modal fade" id="portfolio-single" tabindex="-1" role="dialog" aria-labelledby="portfolioModalScrollable" aria-hidden="true">
+        {{# <div class="portfolio-single modal fade" id="portfolio-single" tabindex="-1" role="dialog" aria-labelledby="portfolioModalScrollable" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable" role="document">
                 <div class="modal-content bg-white">
                     <div class="modal-header">
@@ -181,7 +181,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> #}}
 
         <!--  Page Pilling  Strat  -->
 		 <div id="pagepiling" class="pagepiling">
@@ -205,10 +205,10 @@
                                         <ul class="list-group text-left" id="myMenu">
                                             <li data-menuanchor="hero" class="list-group-item"><a href="#hero">Home</a></li>
                                             <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
-                                            <li data-menuanchor="services" class="list-group-item"><a href="#services">Services</a></li>
+                                            {{# <li data-menuanchor="services" class="list-group-item"><a href="#services">Services</a></li>
                                             <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
                                             <li data-menuanchor="client" class="list-group-item"><a href="#testimonial">Client</a></li>
-                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>
+                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> #}}
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
                                             <li class="list-group-item"><span>Contact Info :</span></li>
@@ -1003,7 +1003,7 @@
              <!--   Contact End   -->
 
              <!--   Footer Start   -->
-             <div id="footer" class="section pp-scrollable footer" data-navigation-color="#fff" data-navigation-tooltip="FOOTER" data-background-image="http://placehold.it/1920x1280">
+             {{# <div id="footer" class="section pp-scrollable footer" data-navigation-color="#fff" data-navigation-tooltip="FOOTER" data-background-image="http://placehold.it/1920x1280">
                  <div class="container-fluid">
                      <div class="row py-6">
                          <div class="title-small">
@@ -1021,7 +1021,7 @@
                          </div>
                      </div>
                  </div>
-             </div>
+             </div> #}}
              <!--   Footer End   -->
 
              <!--   Color Scheme  -->
