--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                                             <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
                                             <li data-menuanchor="services" class="list-group-item"><a href="#services">Resume</a></li>
                                             <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Research</a></li>
-                                            <!-- <li data-menuanchor="client" class="list-group-item"><a href="#testimonial">Client</a></li> -->
-                                            <!-- <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> -->
+                                            <li data-menuanchor="client" class="list-group-item"><a href="#testimonial">Client</a></li> -->
+                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> -->
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
                                             <li class="list-group-item"><span>Contact Info :</span></li>
