--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
              <!--    About End    -->
 
              <!--   Resume Start   -->
-             <section id="resume" class="section pp-scrollable resume" data-navigation-color="#fff" data-navigation-tooltip="RESUME">
+             <section id="Resume" class="section pp-scrollable resume" data-navigation-color="#fff" data-navigation-tooltip="RESUME">
                  <div class="display-table">
                      <div class="display-content">
                          <div class="container">
@@ -292,7 +292,7 @@
                                  <div class="col-lg-12">
                                      <div class="text-left">
                                          <h2 class="text-dark mb-3">My <span class="base-color">Resume</span></h2>
-                                         <p class="text-muted">I Am Available For Freelance Projects.</p>
+                                         <!-- <p class="text-muted">I Am Looking for Post Doctoral Positions </p> -->
                                      </div>
                                  </div>
                              </div>
@@ -301,16 +301,16 @@
                                      <h3 class="text-dark mb-2"><i class="lni-graduation base-color"></i>Education</h3>
                                      <ul class="timeline">
                                          <li>
-                                             <h6 class="base-color mb-0">Master In Computer Science</h6>
-                                             <small class="text-muted ">2012 - 2014</small>
-                                             <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                                             <h6 class="base-color mb-0">Meteorology B.S. Penn State</h6>
+                                             <small class="text-muted ">2011-2015</small>
+                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
                                          <li>
-                                             <h6 class="base-color mb-0">Studied at New York University</h6>
-                                             <small class="text-muted ">2008 - 2012</small>
-                                             <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                                             <h6 class="base-color mb-0">Marine Physics PhD Univeristy of Miami</h6>
+                                             <small class="text-muted ">current</small>
+                                             <p class="text-dark py-3">Department of Ocean Sciences, Air Sea Interactions/Remote Sensing Lab. Advisor: Dr. Hans Graber</p>
                                          </li>
-                                     </ul>
+                                     <!-- </ul>
                                  </div>
                                  <div class="col-lg-6">
                                      <h3 class="text-dark mb-2 mt-5 mt-lg-0"><i class="lni-pencil base-color"></i>Experience</h3>
@@ -327,7 +327,7 @@
                                          </li>
                                      </ul>
                                  </div>
-                             </div>
+                             </div> -->
                              <div class="row pt-6">
                                  <div class="col-lg-6">
                                      <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
@@ -385,13 +385,13 @@
              <!--   Resume End   -->
 
              <!--   Services Start   -->
-             <section id="Research" class="section pp-scrollable services" data-navigation-color="#fff" data-navigation-tooltip="RESEARCH">
+             <section id="Skills" class="section pp-scrollable services" data-navigation-color="#fff" data-navigation-tooltip="SKILLS">
                  <div class="display-table">
                      <div class="display-content">
                          <div class="container">
                              <div class="row">
                                  <div class="title-small">
-                                     <p class="text-dark">My Research</p>
+                                     <p class="text-dark">My Skills</p>
                                  </div>
                                  <div class="col-lg-12">
                                      <div class="text-left">
@@ -729,7 +729,7 @@
                                          <h6 class="font-weight-semibold">Let’s Get Work With Me </h6>
                                          <!-- <p class="text-muted mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p> -->
                                          <div class="mt-4">
-                                             <p class="mt-2 font-weight-bold"> Address : <span class="text-muted"> Miami,Florida, USA</span></p>
+                                             <p class="mt-2 font-weight-bold"> Address : <span class="text-muted"> University of Miami,Florida, USA</span></p>
                                              <!-- <p class="mt-2 font-weight-bold"> Phone : <span class="text-muted"> +1 212-695-1962</span></p> -->
                                              <p class="mt-2 font-weight-bold"> Mail : <span class="text-muted">srb146@miami.edu</span></p>
                                              <!-- <p class="mt-2 font-weight-bold"> Web : <span class="text-muted">www.retrina.com </span></p> -->
