--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                          </li>
                                          <li>
                                              <h6 class="base-color mb-0">Marine Physics PhD Univeristy of Miami</h6>
-                                             <small class="text-muted ">current</small>
+                                             <small class="text-muted ">Current</small>
                                              <p class="text-dark py-3">Department of Ocean Sciences, Air Sea Interactions/Remote Sensing Lab. Advisor: Dr. Hans Graber</p>
                                          </li>
                                      </ul>
@@ -316,44 +316,44 @@
                                      <h3 class="text-dark mb-2 mt-5 mt-lg-0"><i class="lni-pencil base-color"></i>Experience</h3>
                                      <ul class="timeline">
                                          <li>
-                                             <h6 class="base-color mb-0">UI/UX Developer </h6>
-                                             <small class="text-muted ">2014 - 2015</small>
-                                             <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                                             <h6 class="base-color mb-0">Doctoral Research Assistant </h6>
+                                             <small class="text-muted ">Current</small>
+                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
                                          <li>
-                                             <h6 class="base-color mb-0">Senior Developer </h6>
-                                             <small class="text-muted ">2015 - 2019</small>
-                                             <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p>
+                                             <h6 class="base-color mb-0">NASA Intern </h6>
+                                             <small class="text-muted ">Summer 2016</small>
+                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
                                      </ul>
                                  </div>
-                             </div> -->
+                             </div> 
                              <div class="row pt-6">
                                  <div class="col-lg-6">
                                      <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                          <div class="skillbar clearfix" data-percent="95%">
-                                             <div class="skillbar-title"><span>HTML</span></div>
+                                             <div class="skillbar-title"><span>MATLAB</span></div>
                                              <div class="skillbar-bar"></div>
                                              <div class="skill-bar-percent">95%</div>
                                          </div>
                                          <div class="skillbar clearfix " data-percent="85%">
-                                             <div class="skillbar-title"><span>CSS</span></div>
+                                             <div class="skillbar-title"><span>PYTHON</span></div>
                                              <div class="skillbar-bar"></div>
                                              <div class="skill-bar-percent">85%</div>
                                          </div>
                                          <div class="skillbar clearfix" data-percent="75%">
-                                             <div class="skillbar-title"><span>PHP</span></div>
+                                             <div class="skillbar-title"><span>FORTRAN</span></div>
                                              <div class="skillbar-bar"></div>
                                              <div class="skill-bar-percent">75%</div>
                                          </div>
                                          <div class="skillbar clearfix" data-percent="80%">
-                                             <div class="skillbar-title"><span>JQuery</span></div>
+                                             <div class="skillbar-title"><span>IDL</span></div>
                                              <div class="skillbar-bar"></div>
                                              <div class="skill-bar-percent">80%</div>
                                          </div>
                                      </div>
                                  </div>
-                                 <div class="col-lg-6">
+                                 <!-- <div class="col-lg-6">
                                      <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                          <div class="skillbar clearfix" data-percent="95%">
                                              <div class="skillbar-title"><span>angular js</span></div>
@@ -375,7 +375,7 @@
                                              <div class="skillbar-bar"></div>
                                              <div class="skill-bar-percent">80%</div>
                                          </div>
-                                     </div>
+                                     </div> -->
                                  </div>
                              </div>
                          </div>
@@ -385,7 +385,7 @@
              <!--   Resume End   -->
 
              <!--   Services Start   -->
-             <section id="Skills" class="section pp-scrollable services" data-navigation-color="#fff" data-navigation-tooltip="SKILLS">
+             <!-- <section id="Skills" class="section pp-scrollable services" data-navigation-color="#fff" data-navigation-tooltip="SKILLS">
                  <div class="display-table">
                      <div class="display-content">
                          <div class="container">
@@ -401,7 +401,7 @@
                                  </div>
                              </div>
                              <div class="row mt-4">
-                                 <!-- Item 01 -->
+                                 Item 01
                                  <div class="col-lg-4 text-left">
                                      <div class="services-item">
                                          <div class="float-left mt-lg-1 d-inline-block services-icon">
@@ -413,7 +413,7 @@
                                          </div>
                                      </div>
                                  </div>
-                                 <!-- Item 02 -->
+                                 Item 02
                                  <div class="col-lg-4 text-left">
                                      <div class="services-item">
                                          <div class="float-left mt-lg-1 d-inline-block services-icon">
@@ -426,7 +426,7 @@
                                      </div>
                                  </div>
                                  <!-- Item 03 -->
-                                 <div class="col-lg-4 text-left">
+                                 <!-- <div class="col-lg-4 text-left">
                                      <div class="services-item">
                                          <div class="float-left mt-lg-1 d-inline-block services-icon">
                                              <i class="lni-heart size-md base-color"></i>
@@ -438,7 +438,7 @@
                                      </div>
                                  </div>
                                  <!-- Item 04 -->
-                                 <div class="col-lg-4 text-left">
+                                 <!-- <div class="col-lg-4 text-left">
                                      <div class="services-item">
                                          <div class="float-left mt-lg-1  d-inline-block services-icon">
                                              <i class="lni-mobile size-md base-color"></i>
@@ -448,9 +448,9 @@
                                              <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                          </div>
                                      </div>
-                                 </div>
+                                 </div> -->
                                  <!-- Item 05 -->
-                                 <div class="col-lg-4 text-left">
+                                 <!-- <div class="col-lg-4 text-left">
                                      <div class="services-item">
                                          <div class="float-left mt-lg-1 d-inline-block services-icon">
                                              <i class="lni-world size-md base-color mb-0"></i>
@@ -460,9 +460,9 @@
                                              <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                          </div>
                                      </div>
-                                 </div>
+                                 </div> -->
                                  <!-- Item 06 -->
-                                 <div class="col-lg-4 text-left">
+                                 <!-- <div class="col-lg-4 text-left">
                                      <div class="services-item">
                                          <div class="float-left mt-lg-1 d-inline-block services-icon">
                                              <i class="lni-cup size-md base-color"></i>
@@ -477,7 +477,7 @@
                          </div>
                      </div>
                  </div>
-             </section>
+             </section>  --> 
              <!--   Services End   -->
 
              <!--  Portfolio Start  -->
@@ -718,11 +718,11 @@
                                      </div>
                                  </div>
                              </div>
-                             <div class="row mt-5">
+                             <!-- <div class="row mt-5">
                                  <div class="col-lg-12">
                                      <div id="my-map" data-location-lat="43.053454"  data-location-lng="-76.144508" data-location-icon="http://placehold.it/60x30"></div>
                                  </div>
-                             </div>
+                             </div> -->
                              <div class="row mt-5">
                                  <div class="col-lg-6 text-left">
                                      <div class="contact-form">
