--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                                         <ul class="list-group text-left" id="myMenu">
                                             <li data-menuanchor="hero" class="list-group-item"><a href="#hero">Home</a></li>
                                             <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
-                                            <li data-menuanchor="services" class="list-group-item"><a href="#services">Resume</a></li>
-                                            <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Research</a></li>
+                                            <!-- <li data-menuanchor="services" class="list-group-item"><a href="#services">Services</a></li> -->
+                                            <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
                                             <li data-menuanchor="client" class="list-group-item"><a href="#testimonial">Client</a></li> -->
                                             <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> -->
                                         </ul>
