--- a/index.html
+++ b/index.html
@@ -718,11 +718,11 @@
                                      </div>
                                  </div>
                              </div>
-                             <!-- <div class="row mt-5">
+                             <div class="row mt-5">
                                  <div class="col-lg-12">
                                      <div id="my-map" data-location-lat="43.053454"  data-location-lng="-76.144508" data-location-icon="http://placehold.it/60x30"></div>
                                  </div>
-                             </div> -->
+                             </div> 
                              <div class="row mt-5">
                                  <div class="col-lg-6 text-left">
                                      <div class="contact-form">
