--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                                          </div>
                                      </div>
                                  </div>
-                                 <!-- <div class="col-lg-6">
+                                  <div class="col-lg-6">
                                      <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                          <div class="skillbar clearfix" data-percent="95%">
                                              <div class="skillbar-title"><span>angular js</span></div>
@@ -375,7 +375,7 @@
                                              <div class="skillbar-bar"></div>
                                              <div class="skill-bar-percent">80%</div>
                                          </div>
-                                     </div> -->
+                                     </div> 
                                  </div>
                              </div>
                          </div>
