--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
                                          </div>
                                      </div>
                                  </div>
-                                  <div class="col-lg-6">
-                                     <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
+                                  <!-- <div class="col-lg-6"> -->
+                                     <!-- <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                          <div class="skillbar clearfix" data-percent="95%">
                                              <div class="skillbar-title"><span>angular js</span></div>
                                              <div class="skillbar-bar"></div>
@@ -375,8 +375,8 @@
                                              <div class="skillbar-bar"></div>
                                              <div class="skill-bar-percent">80%</div>
                                          </div>
-                                     </div> 
-                                 </div>
+                                     </div>  -->
+                                 <!-- </div> -->
                              </div>
                          </div>
                      </div>
@@ -718,11 +718,11 @@
                                      </div>
                                  </div>
                              </div>
-                             <div class="row mt-5">
+                             <!-- <div class="row mt-5">
                                  <div class="col-lg-12">
                                      <div id="my-map" data-location-lat="43.053454"  data-location-lng="-76.144508" data-location-icon="http://placehold.it/60x30"></div>
                                  </div>
-                             </div> 
+                             </div>  -->
                              <div class="row mt-5">
                                  <div class="col-lg-6 text-left">
                                      <div class="contact-form">
