--- a/index.html
+++ b/index.html
@@ -281,6 +281,16 @@
                                              <small class="text-muted ">Summer 2016</small>
                                              <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
+                                         <li>
+                                            <h6 class="base-color mb-0">NOAA National Weather Service Intern</h6>
+                                            <small class="text-muted ">Spring 2015</small>
+                                            <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
+                                        </li>
+                                        <li>
+                                            <h6 class="base-color mb-0">University of Colorado Boulder/ SouthWest Research Institute REU Intern </h6>
+                                            <small class="text-muted ">Summer 2014</small>
+                                            <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
+                                        </li>
                                      </ul>
                                  </div>
                              </div> 
@@ -341,18 +351,18 @@
              <!--   Resume End   -->
 
              <!--   Services Start   -->
-             <section id="Skills" class="section pp-scrollable services" data-navigation-color="#fff" data-navigation-tooltip="SKILLS">
+             <section id="Research" class="section pp-scrollable services" data-navigation-color="#fff" data-navigation-tooltip="RESEARCH">
                 <div class="display-table">
                     <div class="display-content">
                         <div class="container">
                             <div class="row">
                                 <div class="title-small">
-                                    <p class="text-dark">My Services</p>
+                                    <p class="text-dark">My Research</p>
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="text-left">
-                                        <h2 class="text-dark mb-3">My <span class="base-color">Services</span></h2>
-                                        <p class="text-muted">Services I Offer To My Clients</p>
+                                        <h2 class="text-dark mb-3"> <span class="base-color">My Research</span></h2>
+                                        <p class="text-muted">Research Projects</p>
                                     </div>
                                 </div>
                             </div>
