--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="title-small">
-                                    <p class="text-dark">My Research</p>
+                                    <p class="text-dark">Research</p>
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="text-left">
@@ -374,7 +374,7 @@
                                             <i class="lni-brush-alt size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">Graphic Design</h5>
+                                            <h5 class="mb-3">CLASI</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -386,7 +386,7 @@
                                             <i class="lni-check-mark-circle size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">Bootstrap support</h5>
+                                            <h5 class="mb-3">FLEET</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -398,7 +398,7 @@
                                             <i class="lni-heart size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">Portfolio of works</h5>
+                                            <h5 class="mb-3">REMOTE SENSING</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -410,7 +410,7 @@
                                             <i class="lni-mobile size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">Responsive Theme</h5>
+                                            <h5 class="mb-3">AIR-SEA PHYSICS</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -422,7 +422,7 @@
                                             <i class="lni-world size-md base-color mb-0"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">Go Beyond Limits</h5>
+                                            <h5 class="mb-3">METEOROLOGY</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -434,7 +434,7 @@
                                             <i class="lni-cup size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">Premium Slider</h5>
+                                            <h5 class="mb-3">SPACE WEATHER</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -457,7 +457,7 @@
                                  </div>
                                  <div class="col-lg-12">
                                      <div class="text-left">
-                                         <h2 class="text-dark">Creative <span class="base-color">Works</span></h2>
+                                         <h2 class="text-dark"> <span class="base-color">Portfolio</span></h2>
                                          <p class="text-muted mx-auto section-subtitle mt-3">Meet My Awesome Works and Enjoy</p>
                                      </div>
                                  </div>
@@ -469,16 +469,16 @@
                                          <a href="#" data-filter="*" class="active my-1">All</a>
                                      </li>
                                      <li class="list-inline-item">
-                                         <a href="#" data-filter=".webdesign" class="my-1">Web Design</a>
+                                         <a href="#" data-filter=".webdesign" class="my-1">Field Experiments</a>
                                      </li>
                                      <li class="list-inline-item">
-                                         <a href="#" data-filter=".mobiledesign" class="my-1">Mobile Design</a>
+                                         <a href="#" data-filter=".mobiledesign" class="my-1">Internships</a>
                                      </li>
                                      <li class="list-inline-item">
-                                         <a href="#" data-filter=".seo" class="my-1">Seo</a>
+                                         <a href="#" data-filter=".seo" class="my-1">Social Media</a>
                                      </li>
                                      <li class="list-inline-item">
-                                         <a href="#" data-filter=".graphic" class="my-1">Graphic</a>
+                                         <a href="#" data-filter=".graphic" class="my-1">Coding</a>
                                      </li>
                                  </ul>
                              </div>
