--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                             <i class="lni-check-mark-circle size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">FLEET</h5>
+                                            <h5 class="mb-3">FLEAT</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -410,7 +410,7 @@
                                             <i class="lni-mobile size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">AIR-SEA PHYSICS</h5>
+                                            <h5 class="mb-3">AIR-SEA PHYSICS/METEOROLOGY</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -422,7 +422,7 @@
                                             <i class="lni-world size-md base-color mb-0"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">METEOROLOGY</h5>
+                                            <h5 class="mb-3">PROGRAMMING</h5>
                                             <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
                                         </div>
                                     </div>
@@ -440,6 +440,46 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div class="col-lg-4 text-left">
+                                <div class="services-item">
+                                    <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                        <i class="lni-cup size-md base-color"></i>
+                                    </div>
+                                    <div class="services-content">
+                                        <h5 class="mb-3">DATA SCIENCE</h5>
+                                        <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-4 text-left">
+                                <div class="services-item">
+                                    <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                        <i class="lni-cup size-md base-color"></i>
+                                    </div>
+                                    <div class="services-content">
+                                        <h5 class="mb-3">INSTRUMENTATION</h5>
+                                        <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-4 text-left">
+                                <div class="services-item">
+                                    <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                        <i class="lni-cup size-md base-color"></i>
+                                    </div>
+                                    <div class="services-content">
+                                        <h5 class="mb-3">SCIENCE COMMUNICATION</h5>
+                                        <p class="text-muted mb-0">In a professional context it often happens that private clients corder a publication to be made.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                        </div>
+
                         </div>
                     </div>
                 </div>
