--- a/index.html
+++ b/index.html
@@ -507,16 +507,22 @@
                                          <a href="#" data-filter="*" class="active my-1">All</a>
                                      </li>
                                      <li class="list-inline-item">
+                                        <a href="#" data-filter=".webdesign" class="my-1">Lab</a>
+                                    </li>
+                                     <li class="list-inline-item">
                                          <a href="#" data-filter=".webdesign" class="my-1">Field Experiments</a>
                                      </li>
                                      <li class="list-inline-item">
                                          <a href="#" data-filter=".mobiledesign" class="my-1">Internships</a>
                                      </li>
                                      <li class="list-inline-item">
+                                        <a href="#" data-filter=".graphic" class="my-1">Programming</a>
+                                    </li>
+                                     <li class="list-inline-item">
                                          <a href="#" data-filter=".seo" class="my-1">Social Media</a>
                                      </li>
                                      <li class="list-inline-item">
-                                         <a href="#" data-filter=".graphic" class="my-1">Coding</a>
+                                         <a href="#" data-filter=".graphic" class="my-1">Side Projects</a>
                                      </li>
                                  </ul>
                              </div>
