--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <div class="col-lg-12">
                                     <div class="hero-content">
                                         <h1 class="text-dark mb-3">I'm Samantha</h1>
-                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  </span> <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></h4>
+                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span>,</span></h4>
                                         <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;">I am a PhD student @ University of Miami studying air sea physics & remote sensing. I have a Bachelor's of Science in Meteorology from Penn State. I am a scientific programmer. </p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
@@ -203,7 +203,7 @@
                                     <img src="assets\img\me.jpg" alt="/" class="rounded img-thumbnail w-100">  
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
-                                     <h2 class="text-dark mb-2">About Me<span class="base-color"></span></h2>
+                                     <h2 class="text-dark mb-2"><span class="base-color">About Me</span></h2>
                                      <h5 class="text-dark mb-3">Hello, I'm Samantha Ballard </h5>
                                      <div class="row">
                                          <div class="col-lg-5 col-sm-6 personal-info">
