--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                  </div>
                                  <div class="col-lg-12">
                                      <div class="text-left">
-                                         <h2 class="text-dark mb-3">My <span class="base-color">Resume</span></h2>
+                                         <h2 class="text-dark mb-3"><span class="base-color">My Resume</span></h2>
                                          <!-- <p class="text-muted">I Am Looking for Post Doctoral Positions </p> -->
                                      </div>
                                  </div>
@@ -264,7 +264,7 @@
                                          <li>
                                              <h6 class="base-color mb-0">Marine Physics PhD Univeristy of Miami</h6>
                                              <small class="text-muted ">Current</small>
-                                             <p class="text-dark py-3">Department of Ocean Sciences, Air Sea Interactions/Remote Sensing Lab. Advisor: Dr. Hans Graber</p>
+                                             <p class="base-color mb-0">Department of Ocean Sciences, Air Sea Interactions/Remote Sensing Lab. Advisor: Dr. Hans Graber</p>
                                          </li>
                                      </ul>
                                  </div>
@@ -723,7 +723,7 @@
                                  </div>
                                  <div class="col-lg-12">
                                      <div class="text-left">
-                                         <h2 class="text-dark">Get <span class="base-color">In Touch</span></h2>
+                                         <h2 class="text-dark"> <span class="base-color">Get In Touch</span></h2>
                                          <p class="text-muted mx-auto section-subtitle mt-3">Feel Free To Contact Me Any Time</p>
                                      </div>
                                  </div>
