--- a/nill-dl/index.html
+++ b/nill-dl/index.html
@@ -164,7 +164,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
                                     <div class="hero-content">
-                                        <h1 class="text-dark mb-3">I'm Samantha</h1>
+                                        <h1 class="text-dark">I'm Samantha</h1>
                                         <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span>,</span></h4>
                                         <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;">I am a PhD student @ University of Miami studying air sea physics & remote sensing. I have a Bachelor's of Science in Meteorology from Penn State. I am a scientific programmer. </p>
                                         <div>
@@ -204,7 +204,7 @@
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
                                      <h2 class="text-dark mb-2"><span class="base-color">About Me</span></h2>
-                                     <h5 class="text-dark mb-3">Hello, I'm Samantha Ballard </h5>
+                                     <h5 class="text-dark">Hello, I'm Samantha Ballard </h5>
                                      <div class="row">
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                              <!-- <p class="text-dark">Birthday : <span class="text-gray"> 1 April 1990</span></p> -->
@@ -287,7 +287,7 @@
                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                         </li>
                                         <li>
-                                            <h6 class="base-color mb-0">University of Colorado Boulder/ SouthWest Research Institute REU Intern </h6>
+                                            <h6 class="base-color mb-0">University of Colorado Boulder/Southwest Research Institute REU Intern </h6>
                                             <small class="text-muted ">Summer 2014</small>
                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                         </li>
