--- a/nill-dl/index.html
+++ b/nill-dl/index.html
@@ -203,7 +203,7 @@
                                     <img src="assets\img\me.jpg" alt="/" class="rounded img-thumbnail w-100">  
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
-                                     <h2 class="text-dark "><span class="base-color">About Me</span></h2>
+                                     <h2 class="text-dark"><span class="base-color mb-0">About Me</span></h2>
                                      <h5 class="text-dark">Hello, I'm Samantha Ballard </h5>
                                      <div class="row">
                                          <div class="col-lg-5 col-sm-6 personal-info">
