--- a/nill-dl/index.html
+++ b/nill-dl/index.html
@@ -204,7 +204,7 @@
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
                                      <h2 class="text-dark"><span class="base-color mb-0">About Me</span></h2>
-                                     <h5 class="text-dark mb-2">Hello, I'm Samantha Ballard </h5>
+                                     <h5 class="text-dark mb-2">Hello, I'm Samantha Renee Ballard </h5>
                                      <div class="row">
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                              <!-- <p class="text-dark">Birthday : <span class="text-gray"> 1 April 1990</span></p> -->
