--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                          <div class="container">
                              <div class="row">
                                  <div class="title-small">
-                                     <p class="text-dark mb-2">About Me</p>
+                                     <p class="text-dark mb-2"><span class="base-color">About Me</span></p>
                                  </div>
                              </div>
                              <div class="row mt-4">
@@ -210,13 +210,13 @@
                                              <!-- <p class="text-dark">Birthday : <span class="text-gray"> 1 April 1990</span></p> -->
                                              <!-- <p class="text-dark">Website : <span class="text-gray">www.samanthaballard.science</span></p> -->
                                              <!-- <p class="text-dark">Phone : <span class="text-gray">+123 456 7890</span></p> -->
-                                             <p class="text-dark">City : <span class="base-color"> Miami, Florida, USA</span></p>
-                                             <p class="text-dark">Age : <span class="base-color">27</span></p>
+                                             <p class="text-dark mb-2">City : <span class="base-color"> Miami, Florida, USA</span></p>
+                                             <p class="text-dark mb-2">Age : <span class="base-color">27</span></p>
                                          </div>
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                             
-                                             <p class="text-dark">Degree : <span class="base-color">PhD</span></p>
-                                             <p class="text-dark">Mail : <span class="base-color"><a href="mailto:srb146@miami.edu">srb146@miami.edu</span></a> </p>
+                                             <p class="text-dark mb-2">Degree : <span class="base-color">PhD</span></p>
+                                             <p class="text-dark mb-2">Mail : <span class="base-color"><a href="mailto:srb146@miami.edu">srb146@miami.edu</span></a> </p>
                                              <!-- <p class="text-dark">Freelance : <span class="text-gray">Available</span></p> -->
                                          </div>
                                      </div>
