--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="display-content">
                         <div class="container">
                             <div class="title-small">
-                                <p class="text-dark mb-2"><span class="base-color"></span>Home</span></p>
+                                <p class="text-dark mb-2"><span class="base-color"><Home</span></p>
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col-lg-12">
@@ -357,7 +357,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="title-small">
-                                    <p class="text-dark">Research</p>
+                                    <p class="text-dark mb-2"><span class="base-color">Research</span></p>
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="text-left">
@@ -491,7 +491,7 @@
                          <div class="container">
                              <div class="row">
                                  <div class="title-small">
-                                     <p class="text-dark">Portfolio</p>
+                                     <p class="text-dark mb-2"><span class="base-color">Portfolio</span></p>
                                  </div>
                                  <div class="col-lg-12">
                                      <div class="text-left">
@@ -719,7 +719,7 @@
                          <div class="container">
                              <div class="row">
                                  <div class="title-small">
-                                     <p class="text-dark">Get in Touch</p>
+                                     <p class="text-dark mb-2"><span class="base-color">Get in Touch</span></p>
                                  </div>
                                  <div class="col-lg-12">
                                      <div class="text-left">
