--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <div class="col-lg-12">
                                     <div class="hero-content">
                                         <h1 class="text-dark mb-2"><span class="base-color">I'm Samantha</span></h1>
-                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></span></h4>
+                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A </span> <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></h4>
                                         <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami studying air sea physics & remote sensing. I have a Bachelor's of Science in Meteorology from Penn State. I am a scientific programmer. </span></p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
