--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                 <div class="col-lg-4 text-left">
                                     <div class="services-item">
                                         <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                            <img src="https://img.icons8.com/wired/64/000000/turtle.png"/>
+                                            <i class="las la-cat"></i>
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">SEA TURTLES</h5>
