--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                 <div class="col-lg-4 text-left">
                                     <div class="services-item">
                                         <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                            <i class="las la-cat"></i>
+                                            <i class="lni lni-bug size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">SEA TURTLES</h5>
@@ -395,7 +395,7 @@
                                 <div class="col-lg-4 text-left">
                                     <div class="services-item">
                                         <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                            <i class="lni-heart size-md base-color"></i>
+                                            <i class="lni lni-drop size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">FLOW ENCOUNTERING ABRUPT TOPOGRAPHY EXPERIMENT</h5>
@@ -407,7 +407,7 @@
                                 <div class="col-lg-4 text-left">
                                     <div class="services-item">
                                         <div class="float-left mt-lg-1  d-inline-block services-icon">
-                                            <i class="lni-mobile size-md base-color"></i>
+                                            <i class="lni lni-thunder size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">AIR-SEA PHYSICS/METEOROLOGY</h5>
@@ -419,7 +419,8 @@
                                 <div class="col-lg-4 text-left">
                                     <div class="services-item">
                                         <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                            <i class="lni-world size-md base-color mb-0"></i>
+                                            <i class="lni lni-signal size-md base-color"></i>
+                                            
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">REMOTE SENSING</h5>
@@ -431,7 +432,7 @@
                                 <div class="col-lg-4 text-left">
                                     <div class="services-item">
                                         <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                            <i class="lni-cup size-md base-color"></i>
+                                                <i class="lni lni-rocket size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
                                             <h5 class="mb-3">SPACE WEATHER</h5>
@@ -444,7 +445,7 @@
                                <div class="col-lg-4 text-left">
                                 <div class="services-item">
                                     <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                        <i class="lni-cup size-md base-color"></i>
+                                            <i class="lni lni-graph size-md base-color"></i>
                                     </div>
                                     <div class="services-content">
                                         <h5 class="mb-3">DATA SCIENCE</h5>
@@ -456,7 +457,8 @@
                                 <div class="col-lg-4 text-left">
                                 <div class="services-item">
                                     <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                        <i class="lni-cup size-md base-color"></i>
+                                            <i class="lni lni-microscope size-md base-color"></i>
+                                            
                                     </div>
                                     <div class="services-content">
                                         <h5 class="mb-3">INSTRUMENTATION</h5>
@@ -468,7 +470,7 @@
                                <div class="col-lg-4 text-left">
                                 <div class="services-item">
                                     <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                        <i class="lni-cup size-md base-color"></i>
+                                            <i class="lni lni-thought size-md base-color"></i>
                                     </div>
                                     <div class="services-content">
                                         <h5 class="mb-3">SCIENCE COMMUNICATION</h5>
