--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
              <!--   Contact End   -->
 
              <!--   Footer Start   -->
-             <div id="footer" class="section pp-scrollable footer" data-navigation-color="#fff" data-navigation-tooltip="FOOTER" data-background-image="http://placehold.it/1920x1280">
+             <div id="footer" class="section pp-scrollable footer" data-navigation-color="#fff" data-navigation-tooltip="FOOTER" data-background-image="nill-dl\assets\img\rsmas beach.jpg">
                  <div class="container-fluid">
                      <div class="row py-6">
                          <div class="title-small">
