--- a/index.html
+++ b/index.html
@@ -787,14 +787,14 @@
              <!--   Contact End   -->
 
              <!--   Footer Start   -->
-             <div id="footer" class="section pp-scrollable footer" data-navigation-color="#fff" data-navigation-tooltip="FOOTER" data-background-image="\assets\img\rsmas beach.jpg">
+             <div id="footer" class="section pp-scrollable footer" data-navigation-color="#fff" data-navigation-tooltip="FOOTER" data-background-image="assets\img\rsmas beach.jpg">
                  <div class="container-fluid">
                      <div class="row py-6">
                          <div class="title-small">
                              <p class="text-dark">Footer</p>
                          </div>
                          <div class="text-center m-auto">
-                             <p class="text-dark size-sm">\<span class="base-color">SRB</span></p>
+                             <p class="text-dark size-sm"><span class="base-color">SRB</span></p>
                              <ul class="list-inline socails">
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-facebook-filled text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-twitter-filled text-dark mr-2"></i></a></li>
