--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
              <!--   Contact End   -->
 
              <!--   Footer Start   -->
-             <div id="footer" class="section pp-scrollable footer" data-navigation-color="#fff" data-navigation-tooltip="FOOTER" data-background-image="assets\img\rsmas_beach.jpg">
+             <div id="footer" class="section pp-scrollable footer" data-navigation-color="#fff" data-navigation-tooltip="FOOTER" data-background-image="https://lh3.googleusercontent.com/proxy/o2WXZ0izjoiBZ9Ceir0ROLRyN7ze8C-M1rpQ4U0v7Cdr6iurfr1xYKkssSUyAnljUXRG7P4ZVpGWRPd7FbvMfDF6cTIQOinbkELTWLqazRwK-1cj0EqEJCCunOM6dYXB">
                  <div class="container-fluid">
                      <div class="row py-6">
                          <div class="title-small">
