--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                  <div class="container-fluid">
                      <div class="row py-6">
                          <div class="title-small">
-                             <p class="text-dark">Footer</p>
+                             <p class="text-dark"><span class="base-color">Footer</span></p>
                          </div>
                          <div class="text-center m-auto">
                              <p class="text-dark size-sm"><span class="base-color">SRB</span></p>
@@ -801,7 +801,7 @@
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-github-original text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-linkedin-original text-dark mr-2"></i></a></li>
                              </ul>
-                             <p class="pl-3 text-dark">Copyright © 2019. Template has been designed by <a class="base-color" href="javascript:void(0);">Retrina</a></p>
+                             <p class="pl-3 text-dark"><span class="base-color"><Copyright © 2019. Template has been designed by <a class="base-color" href="javascript:void(0);">Retrina,</span></a></p>
                          </div>
                      </div>
                  </div>
